# zuluCrypt

./: .gitignore  .travis.yml  BUILD_INSTRUCTIONS  CMakeLists.txt  LICENSE  PostInstall.cmake  README  README.md  TODO  _config.yml  build  changelog  cmake_uninstall.cmake.in  configure  copyright  createfile.cpp  createfile.h  createfile.ui  createkeyfile.cpp  createkeyfile.h  createkeyfile.ui  createpartition.cpp  createpartition.h  createpartition.ui  executables.h  index.html  index.md  luksaddkey.cpp  luksaddkey.h  luksaddkey.ui  luksdeletekey.cpp  luksdeletekey.h  luksdeletekey.ui  main.cpp  managefavoritelist.cpp  managefavoritelist.h  managefavoritelist.ui  openartition.ui  openpartition.cpp  openpartition.h  (+37 more)
external_libraries/lxqt_wallet/: CMakeLists.txt
external_libraries/lxqt_wallet/backend/: CMakeLists.txt  lxqtwallet.c
external_libraries/lxqt_wallet/frontend/: CMakeLists.txt  lxqt_kwallet.cpp  lxqt_wallet.cpp
external_libraries/tasks/: CMakeLists.txt  example.cpp
external_libraries/zuluplay/: CMakeLists.txt  README.md  hdr.c  humanize.c  main.c  tcplay.c  tcplay.map  tcplay_api.c
plugins/: CMakeLists.txt  icon.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugins.h  plugins.pro
plugins/generic_header/: CMakeLists.txt
plugins/gpg/: CMakeLists.txt  getgpgkey.cpp  getgpgkey.h  gpg.h  gpg.pro  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/hmac/: CMakeLists.txt  README  hmac.pro  hmac_key.h  main.cpp
plugins/keydialog-qt/: CMakeLists.txt  icon.qrc  keydialog-qt.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/keykeyfile/: CMakeLists.txt  keykeyfile.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/keyring/: README  keyring.c
plugins/kwallet/: CMakeLists.txt  kwallet.pro  main.cpp  socketwritedata.cpp  socketwritedata.h  wallet.cpp  wallet.h  zulusocket.cpp  zulusocket.h
plugins/luks/: CMakeLists.txt  main.cpp
plugins/network_key/: CMakeLists.txt  README  crypt_buffer.c  crypt_buffer.h  main.cpp  network_key.h  server.c  zuluCryptKeyServer.desktop
plugins/steghide/: CMakeLists.txt  getKey.cpp  getKey.h  main.cpp  mainwindow.cpp  mainwindow.h
plugins/test/: README  zuluCrypt-testKey.c
plugins/tomb/: CMakeLists.txt  main.cpp
plugins/utility/: getKey.cpp  getKey.h  icon.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
zuluCrypt-cli/: .libzuluCrypt.c.kate-swp  CMakeLists.txt  NOTE  String.c  String.h  add_key.c  build  constants.h  executables.h  includes.h  libzuluCrypt.c  partitions.c  version.h  volume_info.c  zuluCrypt-cli  zuluCrypt-cli.pro  zuluCrypt.c  zuluCrypt.h
zuluCrypt-cli/keyring/: keyring.c
zuluCrypt-cli/lib/: .print_mounted_volumes.c.kate-swp  add_key.c  bitlocker.c  blkid_evaluate_tag.c  close_mapper.c  close_volume.c  create_loop_device.c  create_luks.c  create_mapper_name.c  create_tcrypt.c  create_volume.c  empty_slots.c  execute_commands.c  file_encryption.c  file_path_security.c  includes.h  is_luks.c  is_path_valid.c  libzuluCrypt.c  libzuluCrypt.h  luks2_support.h  mount_fs_options.c  mount_volume.c  mountinfo.c  open_luks.c  open_plain.c  open_tcrypt.c  open_volume.c  parse_fstab.c  print_mounted_volumes.c  process_mountinfo.c  real_path.c  remove_key.c  resolve_paths.c  status.c  unmount_volume.c  unmount_volumes.c  user_home_path.c  version.c  volume_type.c
zuluCrypt-cli/lib/canonicalize/: README  canonicalize.h
zuluCrypt-cli/pluginManager/: libzuluCryptPluginManager.h  zuluCryptPluginManager.c
zuluCrypt-cli/process/: process.c  process.h
zuluCrypt-cli/socket/: socket.c  socket.h
zuluCrypt-cli/string/: String.c  String.h  StringList.c  StringList.h  StringManage.c  StringManage.h  StringTypes.h
zuluCrypt-cli/utility/process/: process.c  process.h
zuluCrypt-cli/utility/socket/: socket.c  socket.h
zuluCrypt-cli/utility/string/: String.c  String.h  StringList.c  StringList.h  StringManage.c  StringManage.h
zuluCrypt-gui/: CMakeLists.txt  TRANSLATIONS  about.cpp  about.h  about.ui  additemtotablethread.cpp  additemtotablethread.h  backupluksheader.cpp  backupluksheader.h  backupluksheader.ui  checkforupdates.cpp  checkforupdates.h  checkvolumetype.cpp  checkvolumetype.h  closeallvolumesthread.cpp  closeallvolumesthread.h  closevolumethread.cpp  closevolumethread.h  contactinfo.cpp  contactinfo.h  contactinfo.ui  createfile.cpp  createfile.h  createfile.ui  createfilethread.cpp  createfilethread.h  createkeyfile.cpp  createkeyfile.h  createkeyfile.ui  createkeyfilethread.cpp  createkeyfilethread.h  createpartition.cpp  createpartition.h  createpartition.ui  createvolume.cpp  createvolume.h  createvolume.ui  createvolumedialog.cpp  createvolumedialog.h  createvolumedialog.ui  (+177 more)
zuluCrypt-gui/lxqt_wallet/: LICENSE  README.md  lxqt_wallet.pro
zuluCrypt-gui/lxqt_wallet/backend/: CMakeLists.txt  README  lxqtwallet.c  lxqtwallet.h
zuluCrypt-gui/lxqt_wallet/frontend/: CMakeLists.txt  changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  icons.qrc  lxqt_internal_wallet.cpp  lxqt_internal_wallet.h  lxqt_kwallet.cpp  lxqt_kwallet.h  lxqt_libsecret.cpp  lxqt_libsecret.h  lxqt_secret_service.cpp  lxqt_secret_service.h  lxqt_wallet.cpp  (+10 more)
zuluCrypt-gui/md5/: CMakeLists.txt  md5.c  md5.h
zuluCrypt-gui/sharedObjects/: CMakeLists.txt  icon.qrc
zuluMount-gui/: CMakeLists.txt  auto_mount.cpp  auto_mount.h  auto_mount_helper.cpp  auto_mount_helper.h  cryfstask.cpp  cryfstask.h  deviceoffset.cpp  deviceoffset.h  deviceoffset.ui  events.cpp  events.h  icon.qrc  keydialog.cpp  keydialog.h  keydialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managepartitionthread.cpp  managepartitionthread.h  monitor_mountinfo.cpp  monitor_mountinfo.h  mountoptions.cpp  mountoptions.h  mountoptions.ui  mountpartition.cpp  mountpartition.h  mountpartition.ui  oneinstance.cpp  oneinstance.h  siritask.cpp  siritask.h  task.cpp  task.h  veracryptpimdialog.cpp  veracryptpimdialog.h  veracryptpimdialog.ui  volumeentryproperties.cpp  (+13 more)
zuluPolkit/: CMakeLists.txt  main.cpp  zulupolkit.cpp
zuluSafe/: CMakeLists.txt  zuluSafe.c  zuluwallet.c
(+102 files in other folders)
